--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,7 +24,7 @@ jobs:
           name:  Build
           run: dotnet build --no-restore
 
-        - id: test
-          if: steps.build.outcome == 'success'
-          name: Test
+        #- id: test
+          #if: steps.build.outcome == 'success'
+          #name: Test
           #run: dotnet test "TestTheFactory.csproj" --collect "XPlat Code Coverate"
