--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,4 +35,7 @@ jobs:
 
         steps:
         - name: Download Artifact
+          uses: actions/download-artifact@v4
+          with:
+            name: dotnet-webapp
     
