--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,5 +42,5 @@ jobs:
         - name: Azure Login
           uses: azure/login@v2
           with:
-            creds: ${{}}
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
     
