--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,5 +47,5 @@ jobs:
         - name: Deploy To Azure
           uses: azure/webapps-deploy@v2
           with:
-            app-name:           
-            package:      
+            app-name: AzureLinuxAppService          
+            package: TheFactory.zip     
