--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,7 +22,7 @@ jobs:
 
         - id: build
           name:  Build
-          run: dotnet build --no-restore
+          run: dotnet build ./TheFactory/TheFactory.csproj --no-restore
 
         #- id: test
           #if: steps.build.outcome == 'success'
@@ -31,7 +31,7 @@ jobs:
 
         - id: publish
           name: Publish
-          run: dotnet publish -c Release -r linux-x64 --self-contained false -o ./publish
+          run: dotnet publish ./TheFactory/TheFactory.csproj -c Release -r linux-x64 --self-contained false -o ./publish
 
         - name: Zip Artifact
           run: zip TheFactory.zip ./publish
