Add Dev to YML file

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: Factory workflow
 on: 
   workflow_dispatch:
   push:
-     branches: ['main']
+     branches: ['main', 'dev']
  
 jobs:
     build: 
