--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,8 +33,10 @@ jobs:
           name: Publish
           run: dotnet publish ./TheFactory/TheFactory.csproj -c Release -r linux-x64 --self-contained false -o ./publish
 
-        - name: Zip Artifact
-          run: cd publish && zip -r ../TheFactory.zip .
+        - name: Zip Published App
+          run: |
+            cd publish
+            zip -r ../TheFactory.zip ./*
 
           
         - id: upload
