--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
@@ -18,30 +19,25 @@ jobs:
         dotnet-version: 8.0.x
 
     - name: Restore Dependencies
-      run: dotnet restore
+      run: dotnet restore ./TheFactory/TheFactory.csproj
 
-    - id: build
-      name: Build
+    - name: Build Project
       run: dotnet build ./TheFactory/TheFactory.csproj --no-restore
 
-    - id: publish
-      name: Publish
-      run: dotnet publish ./TheFactory/TheFactory.csproj -c Release -o ./publish
+    - name: Publish App
+      run: dotnet publish ./TheFactory/TheFactory.csproj -c Release -r linux-x64 --self-contained false -o ./publish
 
-    - name: Verify DLL exists
+    - name: Verify TheFactory.dll exists
       run: |
-        test -f ./publish/TheFactory.dll && echo "✅ TheFactory.dll found" || (echo "❌ Missing TheFactory.dll!" && exit 1)
+        ls -lah ./publish
+        test -f ./publish/TheFactory.dll || (echo "❌ TheFactory.dll not found in publish output!" && exit 1)
 
     - name: Zip Published App
       run: |
         cd publish
         zip -r ../TheFactory.zip .
 
-    - name: List contents of ZIP
-      run: unzip -l TheFactory.zip
-
-    - id: upload
-      name: Upload Artifact
+    - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
         name: dotnet-webapp
@@ -58,18 +54,15 @@ jobs:
         name: dotnet-webapp
         path: ./app_package
 
-    - name: Verify Artifact Contents
-      run: |
-        echo "Listing contents of downloaded artifact:"
-        ls -lah ./app_package
-        unzip -l ./app_package/TheFactory.zip
+    - name: Check ZIP Contents
+      run: unzip -l ./app_package/TheFactory.zip
 
     - name: Azure Login
       uses: azure/login@v2
       with:
         creds: ${{ secrets.FACTORY_AUTH_SECRET }}
 
-    - name: Deploy To Azure
+    - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: AzureLinuxAppService
