--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,7 +25,7 @@ jobs:
       run: dotnet build ./TheFactory/TheFactory.csproj --no-restore
 
     - name: Publish App
-      run: dotnet publish ./TheFactory/TheFactory.csproj -c Release -r linux-x64 --self-contained false -o ./publish
+      run: dotnet publish ./TheFactory/TheFactory.csproj -c Release -r linux-x64 --self-contained true -o ./publish
 
     - name: Verify TheFactory.dll exists
       run: |
