--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,6 +33,9 @@ jobs:
           name: Publish
           run: dotnet publish ./TheFactory/TheFactory.csproj -c Release -r linux-x64 --self-contained false -o ./publish
 
+        - name: List files in publish directory
+          run: ls -lh ./publish
+
         - name: Zip Artifact
           run: cd publish && zip -r ../TheFactory.zip .
 
