--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,16 +36,12 @@ jobs:
         - name: List files in publish directory
           run: ls -lh ./publish
 
-        - name: Zip Artifact
-          run: cd publish && zip -r ../TheFactory.zip .
-
-          
-        - id: upload
-          name: Upload Artifact
+        - name: Upload Published Files
           uses: actions/upload-artifact@v4
           with:
-                name: dotnet-webapp 
-                path: TheFactory.zip  
+            name: dotnet-webapp
+            path: publish/
+
 
     deploy:
         needs: build
@@ -56,6 +52,10 @@ jobs:
           uses: actions/download-artifact@v4
           with:
             name: dotnet-webapp
+            path: ./publish
+
+        - name: Zip for Azure
+          run: cd publish && zip -r ../TheFactory.zip .
 
         - name: Azure Login
           uses: azure/login@v2
