--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,73 +3,73 @@ name: Factory workflow
 on: 
   workflow_dispatch:
   push:
-     branches: ['main', 'dev']
- 
+    branches: ['main', 'dev']
+
 jobs:
-    build: 
-        runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-        steps: 
-        - uses: actions/checkout@v4
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-        - name: Setup .NET
-          uses: actions/setup-dotnet@v4
-          with:
-                dotnet-version: 8.0.x
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 8.0.x
 
-        - name: Restore Dependencies
-          run: dotnet restore
+    - name: Restore Dependencies
+      run: dotnet restore
 
-        - id: build
-          name:  Build
-          run: dotnet build ./TheFactory/TheFactory.csproj --no-restore
+    - id: build
+      name: Build
+      run: dotnet build ./TheFactory/TheFactory.csproj --no-restore
 
-        #- id: test
-          #if: steps.build.outcome == 'success'
-          #name: Test
-          #run: dotnet test "TestTheFactory.csproj" --collect "XPlat Code Coverate"
+    # Uncomment if you want to run tests
+    # - id: test
+    #   if: steps.build.outcome == 'success'
+    #   name: Test
+    #   run: dotnet test "TestTheFactory.csproj" --collect "XPlat Code Coverage"
 
-        - id: publish
-          name: Publish
-          run: dotnet publish ./TheFactory/TheFactory.csproj -c Release -r linux-x64 --self-contained false -o ./publish
+    - id: publish
+      name: Publish
+      run: dotnet publish ./TheFactory/TheFactory.csproj -c Release -r linux-x64 --self-contained false -o ./publish
 
-        - name: List files in publish directory
-          run: ls -lh ./publish
+    - name: List published files
+      run: ls -lh ./publish
 
-        - name: Upload Published Files
-          uses: actions/upload-artifact@v4
-          with:
-            name: dotnet-webapp
-            path: publish/
+    - name: Upload Published Files
+      uses: actions/upload-artifact@v4
+      with:
+        name: dotnet-webapp
+        path: publish/
 
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
 
-    deploy:
-        needs: build
-        runs-on: ubuntu-latest
+    steps:
+    - name: Download Artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: dotnet-webapp
+        path: ./publish
 
-        steps:
-        - name: Download Artifact
-          uses: actions/download-artifact@v4
-          with:
-            name: dotnet-webapp
-            path: ./publish
+    - name: Zip for Azure
+      run: |
+        cd publish
+        zip -r ../TheFactory.zip ./*
 
-        - name: Zip for Azure
-          run: |
-            cd publish
-            zip -r ../TheFactory.zip ./*
+    - name: Inspect ZIP (debug)
+      run: unzip -l TheFactory.zip
 
-        - name: Verify ZIP Contents
-          run: unzip -l TheFactory.zip
+    - name: Azure Login
+      uses: azure/login@v2
+      with:
+        creds: ${{ secrets.FACTORY_AUTH_SECRET }}
 
-
-        - name: Azure Login
-          uses: azure/login@v2
-          with:
-            creds: ${{ secrets.FACTORY_AUTH_SECRET }}
-
-        - name: Deploy To Azure
-          uses: azure/webapps-deploy@v2
-          with:
-            app-name: AzureLinuxAppService          
-            package: TheFactory.zip     
+    - name: Deploy To Azure
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: AzureLinuxAppService
+        package: TheFactory.zip
