--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,3 +1,7 @@
+
+Run details
+Workflow file for this run
+.github/workflows/ci-cd.yml at 82483fd
 name: Factory workflow
 
 on: 
@@ -31,19 +35,11 @@ jobs:
 
         - id: publish
           name: Publish
-          run: dotnet publish ./TheFactory/TheFactory.csproj -c Release -o ./publish
+          run: dotnet publish ./TheFactory/TheFactory.csproj -c Release -r linux-x64 --self-contained false -o ./publish
 
-        - name: Verify DLL exists before zipping
-          run: test -f ./publish/TheFactory.dll && echo "DLL found ✅" || (echo "❌ TheFactory.dll missing!" && exit 1)
+        - name: Zip Artifact
+          run: cd publish && zip -r ../TheFactory.zip .
 
-
-        - name: Zip Published App
-          run: |
-            cd publish
-            zip -r ../TheFactory.zip ./*
-
-        - name: List contents of ZIP
-          run: unzip -l TheFactory.zip
           
         - id: upload
           name: Upload Artifact
@@ -71,4 +67,4 @@ jobs:
           uses: azure/webapps-deploy@v2
           with:
             app-name: AzureLinuxAppService          
-            package: TheFactory.zip     
+            package: TheFactory.zip   
