--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -71,4 +71,30 @@ jobs:
           uses: azure/webapps-deploy@v2
           with:
             app-name: AzureLinuxAppService          
-            package: TheFactory.zip   
+            package: TheFactory.zip
+
+    angular:
+        runs-on: ubuntu-latest
+
+        steps:
+        - uses: actions/checkout@v4
+
+        - name: Setup Node.js
+          uses: actions/setup-node@v4
+          with:
+            node-version: '18.x'
+
+        - name: Install Angular dependencies
+          run: |
+            cd TheFactory/ClientApp
+            npm install
+
+        - name: Build Angular app
+          run: |
+            cd TheFactory/ClientApp
+            npm run build -- --configuration production
+
+        - name: Copy Angular build to wwwroot
+          run: |
+            rm -rf TheFactory/wwwroot/*
+            cp -r TheFactory/ClientApp/dist/*/* TheFactory/wwwroot/
