--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -97,4 +97,4 @@ jobs:
         - name: Copy Angular build to wwwroot
           run: |
             rm -rf TheFactory/wwwroot/*
-            cp -r TheFactory/ClientApp/dist/*/* TheFactory/wwwroot/
+            cp -r TheFactory/ClientApp/dist/* TheFactory/wwwroot/
